------------------------------------------------------------------------------
sux0r 2.0.x
------------------------------------------------------------------------------

Fixed a bug with bookmarks menu

Added log buttons in user administration menu

Fixed: don't call suxNaiveBayesian destructor unless logged in

Fixed bug #2754647: Can't Edit Un-approved Feed


------------------------------------------------------------------------------
sux0r 2.0.4
------------------------------------------------------------------------------

Changed license from AGPL to GPL

Refactarded all up in the code

Added JavaScript menus

Fixed a bug that was preventing login using WAMP

Fixed a search highlighting bug

Fixed a bug where Smarty would crash if an apostraphe was in $title of widget()

Removed redundant security checks from several modules.

Added the ability to permanently delete a user

Updated symbionts: htmLawed 1.1.7.2

------------------------------------------------------------------------------
sux0r 2.0.3
------------------------------------------------------------------------------

Fallback to cURL if allow_url_fopen is disabled.

HTTP Authorization fix when using PHP in CGI mode

Moved inline HTML in suxRenderer() to various templates

Updated symbionts: htmLawed 1.1.6, JpGraph 2.3.4

------------------------------------------------------------------------------
sux0r 2.0.2
------------------------------------------------------------------------------

General bugfixes and optimizations

Various changes related to problems when clean_url was false

Changed renderer variable naming conventions. It was too confusing to
know where a variable was comming from whev everything was named
r->text.somekey.

Moved language files into template directories.

Using PDO::ATTR_EMULATE_PREPARES in suxDB to handle MySql's (lack of) caching

Work in progress: In an effort to improve results on skewed training data, I